# SdkTaifexMp2023

./: CMakeLists.txt  README.txt
cxx_include/xplum/taifex_msg_proto/: define.h
cxx_include/xplum/taifex_msg_proto_sdk/: define.h
cxx_src/: CounterMsgSeqNumV.cxx  CounterOrderV.cxx  WidgetTaifexMpMessage.cxx  WidgetTaifexMpMessageL41.cxx  WidgetTaifexMpOrder.cxx  widget_method.cxx  widget_object.cxx
sLibx-TaifexMpBasic/: CMakeLists.txt
sLibx-TaifexMpBasic/cxx_include/xplum_model/taifex_msg_proto/: _CONFIG_MACRO.h  _define_cxx.h  static_constant_msg_tcp.h  static_function_msg.h
sLibx-TaifexMpBasic/cxx_include/xplum_model/taifex_msg_proto/network_osi_L05/: constant_tcp.h
sLibx-TaifexMpBasic/cxx_include/xplum_model/taifex_msg_proto/network_osi_L06/: constant_msg.h  function_msg.h
sLibx-TaifexMpBasic/cxx_include/xplum_model/taifex_msg_proto/network_osi_L06/structure_msg/: msg_lxx_layer.h  msg_rxx_layer.h
sLibx-TaifexMpBasic/cxx_include/xplum_model/taifex_msg_proto/network_osi_L06/structure_msg_field/: msg_field.h  msg_field_array.h  msg_field_enumerate.h
sLibx-TaifexMpBasic/cxx_include/xplum_model/taifex_msg_proto/structure_message/: msg_lxx_layer.h  msg_rxx_layer.h
sLibx-TaifexMpBasic/cxx_include/xplum_model/taifex_msg_proto/structure_message_field/: msg_field_sizeof_array.h
sLibx-TaifexMpBasic/cxx_src/: function_msg.cxx  static_function.cxx
sLibx-TaifexMpExtra/: CMakeLists.txt
sLibx-TaifexMpExtra/cxx_src/: CounterMsgSeqNum_V.cxx  CounterOrderSeq_V.cxx  EzV2_TcpBothEndpointMsg_Sync.cxx  EzV3_TaifexMpSocketer_Sync.cxx  MkV3_MsgSessionLayerLxx_FsmSchema.cxx  MsgSessionMsgProcessor.cc  MsgSessionMsgProcessor.cc-template_function.cc  MsgSessionMsgProcessor.cxx  MsgSocketer_Sync.cxx  action_kitbag_tcp_contact.cxx  fsm_msg_transfer_flow.cxx-FsmAction.cxx  function_msg.cxx  msg_kitbag_common.cxx  msg_lxx_layer.cxx-MsgZipSize.cxx  msg_util_RE_orderno.cxx  msg_util_general.cxx  msg_util_session_context.cxx  static_function_msg.cxx
sLibz-Common/: CMakeLists.txt
sLibz-CommonBoost/: CMakeLists.txt
sLibz-CommonBoost/cxx_include/boost0/asio/: EzV2_TcpBothEndpointWay01_V.h  EzV2_TcpBothEndpointWay01_V2.cc-implement.cc  EzV3_TcpSocketerSyncBy_BoostAsio.h  EzV3_TcpSocketerSync_V.h  EzV4_TcpSocketerSyncBoostAsio.h  EzV4_TcpSocketerSync_V.h  _define_cxx.h
sLibz-CommonBoost/cxx_include/boost0/msm/: FsmElementWrapWithCtrlHandle_A.cc  FsmElementWrapWithCtrlHandle_A.cc-implement.cc  FsmElementWrapWithCtrlHandle_A.h  FsmFactoryPlus.h
sLibz-CommonBoost/cxx_include/spdlog0/: logger_factory.h
sLibz-CommonBoost/cxx_src/: EzV2_TcpBothEndpointWay01SyncSimple.cxx  EzV2_TcpBothEndpoint_A.cxx  EzV3_TcpSocketerSyncBy_BoostAsio.cc-01OnlyBoostAsio.cc  EzV3_TcpSocketerSyncBy_BoostAsio.cc-02.cc  EzV3_TcpSocketerSyncBy_BoostAsio.cxx  EzV3_TcpSocketerSync_V.cxx  EzV4_TcpSocketerSyncBoostAsio.cc-01OnlyBoostAsio.cc  EzV4_TcpSocketerSyncBoostAsio.cc-02.cc  EzV4_TcpSocketerSyncBoostAsio.cxx  EzV4_TcpSocketerSync_V.cxx
sTest-Example/: CMakeLists.txt
sTest-Example/cxx_xxx_example/: Example01_01MsgLxxRawClient.cxx  Example01_02MsgLxxFsmClient.cxx  Example01_03MsgLxxFsmBothEndpoint.cxx  Example01_Counter.cxx  ExampleA1_MsgSession-Test01_Raw.cxx  ExampleA1_MsgSession-Test02_WithMsgProcessor.cxx  ExampleA1_MsgSession-Test03_WithFsm.cxx
separate_0CxxCommon-cxx_include/XPLUM_MACRO/: MACRO_INITIALIZATION.h
separate_0CxxCommon-cxx_include/xplum/ablething/: GlobalAble.h  StorageAbleV.h
separate_0CxxCommon-cxx_include/xplum/consteval_method/: algorithm_method.h
separate_0CxxCommon-cxx_include/xplum/expanded_cast/: enumerate_cast.h
separate_0CxxCommon-cxx_include/xplum/prototype/: AssignerArray.h  Viewer.h  ViewerViaEnumToInteger.h
separate_0CxxCommon-cxx_include/xplum/prototype_algorithm/: ConvertorBtwStrIntByCustomDigit.h
subdir_Example/: CMakeLists.txt
subdir_Example/cxx_src_example/: Example01_01MsgLxxRawClient.cxx  Example01_02MsgLxxFsmClient.cxx  Example01_03MsgLxxFsmBothEndpoint.cxx  ExampleA1_Counter.cxx
subdir_Example/cxx_src_gtest/: Example01_MsgLxx.cxx  Example02_Counter.cxx
subdir_Member01-TaifexMp-Origin/: CMakeLists.txt
subdir_Member01-TaifexMp-Origin/cxx_src/: static_function.cxx
subdir_Member02-TaifexMp-Widget/: CMakeLists.txt
subdir_Member02-TaifexMp-Widget/cxx_src/: CounterMsgSeqNumV.cxx  CounterOrderV.cxx  EzTcpClientMsg_Sync.cxx  EzV2_TcpBothEndpointMsg_Sync.cxx  MsgTcpAccesser_EzSync.cxx  action_kitbag_tcp_contact.cxx  fsm_msg_transfer_flow.cxx  fsm_msg_transfer_flow.cxx-FsmAction.cxx  msg_kitbag_common.cxx  msg_kitbag_re_orderno.cxx  msg_lxx_layer.cxx-MsgZipSize.cxx  static_function_msg.cxx
subdir_Separate-Common/: CMakeLists.txt
subdir_Separate-CommonBoost/: CMakeLists.txt
subdir_Separate-CommonBoost/cxx_include/boost0/: big_endian_integer.h
subdir_Separate-CommonBoost/cxx_include/boost0/asio/: EzTcpAccesserWay01SyncSimple.h  EzTcpAccesserWay01_V.h  EzTcpAccesser_A.h  EzTcpClientWay01SyncSimple.h  EzTcpClientWay01_V.h  EzTcpClient_A.h  EzV2_TcpBothEndpointWay01SyncSimple.h  EzV2_TcpBothEndpointWay01_V.h  EzV2_TcpBothEndpointWay01_V2.cc  EzV2_TcpBothEndpointWay01_V2.cc-implement.cc  EzV2_TcpBothEndpointWay01_V2.h  EzV2_TcpBothEndpoint_A.h
subdir_Separate-CommonBoost/cxx_include/boost0/msm/: FsmElementWrapSimple.cc  FsmElementWrapSimple.cc-implement.cc  FsmElementWrapSimple.h  FsmElementWrapWithCtrlHandle_A.cc  FsmElementWrapWithCtrlHandle_A.cc-implement.cc  FsmElementWrapWithCtrlHandle_A.h
subdir_Separate-CommonBoost/cxx_include_impl/_/: EzV2_TcpBothEndpointWay01_V2.h  FsmElementWrapSimple.h  FsmElementWrapWithCtrlHandle_A.h
subdir_Separate-CommonBoost/cxx_include_impl/boost0/asio/: EzV2_TcpBothEndpointWay01_V2.h
subdir_Separate-CommonBoost/cxx_include_impl/boost0/msm/: FsmElementWrapSimple.h  FsmElementWrapWithCtrlHandle_A.h
subdir_Separate-CommonBoost/cxx_src/: EzTcpAccesserWay01SyncSimple.cxx  EzTcpClientWay01SyncSimple.cxx  EzTcpClientWay01_V.cxx  EzTcpClient_A.cxx  EzV2_TcpBothEndpointWay01SyncSimple.cxx  EzV2_TcpBothEndpointWay01_V.cxx  EzV2_TcpBothEndpoint_A.cxx  ez_tcp_accesser.cxx
(+204 files in other folders)
