set(VAR0_PROJECT_NAME "${CMAKE_PROJECT_NAME}-Separate-CommonBoost")

###
cmake_minimum_required(VERSION "3.24.2")
project("${VAR0_PROJECT_NAME}")
##-
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

###
if(NOT Boost_FOUND)
  find_package(Boost REQUIRED COMPONENTS system)
endif()

###
FILE(GLOB_RECURSE ARR0_PROJECT_CXX_SOURCE "${PROJECT_SOURCE_DIR}/cxx_src/*.cxx")
##-
unset(VAR0_FUNC_PARM0_LIBRARY_TYPE)
unset(VAR0_FUNC_PARM0_LIBRARY_SET_ACCESS)
list(LENGTH ARR0_PROJECT_CXX_SOURCE VAR0_SIZE)
if(NOT VAR0_SIZE EQUAL 0)
  set(VAR0_FUNC_PARM0_LIBRARY_TYPE "OBJECT")
  set(VAR0_FUNC_PARM0_LIBRARY_SET_ACCESS "PUBLIC")
else()
  set(VAR0_FUNC_PARM0_LIBRARY_TYPE "INTERFACE")
  set(VAR0_FUNC_PARM0_LIBRARY_SET_ACCESS "INTERFACE")
endif()
##-
add_library(
  "${VAR0_PROJECT_NAME}" "${VAR0_FUNC_PARM0_LIBRARY_TYPE}"
  "${ARR0_PROJECT_CXX_SOURCE}"
)
target_include_directories(
  "${VAR0_PROJECT_NAME}" "${VAR0_FUNC_PARM0_LIBRARY_SET_ACCESS}"
  "${PROJECT_SOURCE_DIR}/cxx_include_impl/"
  "${PROJECT_SOURCE_DIR}/cxx_include/"
  #
  "${Boost_INCLUDE_DIRS}"
)
